Added external quiz
